# dotfiles-nix

./: .cspell.json  .gitignore  AGENTS.md  CONTEXT.md  WORKAROUNDS.md  configuration.nix  copilot-nes-bug-report.md  flake.nix  hardware-configuration.nix  home.nix  notes.md  readme.md  result  test
mods/dotfiles/toolbox/read-aloud/: Makefile  pyproject.toml
mods/dotfiles/toolbox/read-aloud/src/read_aloud/: app.py  cli.py  extractor.py  tts.py
mods/dotfiles/toolbox/read-aloud/tests/: test_app.py  test_cli.py  test_extractor.py  test_tts.py
mods/dotfiles/toolbox/stackman/: pyproject.toml
mods/dotfiles/toolbox/stackman/docs/: design.md
mods/dotfiles/toolbox/stackman/src/stackman/: __init__.py  app.py  cli.py  context.py  db.py  git_ops.py  graph.py  models.py  prompts.py  stack_ids.py  sync_plan.py
mods/dotfiles/toolbox/stackman/src/stackman/commands/: __init__.py  (+11 more)
mods/dotfiles/toolbox/stackman/tests/: conftest.py  git_repo_fixture.py  test_app.py  test_branch_first_cli.py  test_cli.py  test_db.py  test_discover_command.py  test_done_command.py  test_git_ops.py  test_git_repo_fixture.py  test_graph.py  test_init_command.py  test_merged_command.py  test_prompts.py  test_stack_ids.py  test_stack_meta.py  test_sync_command.py  test_sync_plan.py  test_track_command.py  test_worktrees.py
mods/dotfiles/toolbox/tmux-picker/: pyproject.toml
mods/dotfiles/toolbox/tmux-picker/src/tmux_picker/: cli.py  kill.py  quickjump.py  tmux.py  workmux.py
mods/dotfiles/toolbox/tmux-picker/tests/: test_cli.py  test_kill.py  test_quickjump.py  test_tmux.py  test_workmux.py
(+510 files in other folders)
